<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <!-- Header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/border_header"
        android:paddingHorizontal="23dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/exclude"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="PomodoroLearn"
            android:textColor="#D9D9D9"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/logo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/hambuger"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/qoutes_api"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <!-- Timer Mode Buttons -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/timer_modes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="24dp"
        app:layout_constraintTop_toBottomOf="@id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:id="@+id/btn_pomodoro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_status"
                android:fontFamily="@font/poppins_semiBold"
                android:padding="4sp"
                android:text="@string/pomodoro"
                android:textAlignment="center"
                android:textColor="#00FF00"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_short_break"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12sp"
                android:layout_weight="1"
                android:background="@drawable/border_status"
                android:fontFamily="@font/poppins_semiBold"
                android:padding="4sp"
                android:text="@string/short_break"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_long_break"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_status"
                android:fontFamily="@font/poppins_semiBold"
                android:padding="4sp"
                android:text="@string/long_break"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>



    <!-- Timer Wrapper -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timer_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/timer_modes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/border_status">

        <!-- Timer Display -->
        <TextView
            android:id="@+id/timer_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/digitalnumbers_regular"
            android:text="@string/timer"
            android:textColor="#FFFFFF"
            android:textSize="64sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Control Buttons -->
        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="36dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_setting"
            app:layout_constraintTop_toBottomOf="@id/timer_display"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/btn_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/poppins_regular"
            android:paddingVertical="8dp"
            android:paddingHorizontal="46dp"
            android:text="@string/controller"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/timer_display"
            app:layout_constraintStart_toEndOf="@id/btn_settings"
            app:layout_constraintEnd_toStartOf="@id/btn_skip" />

        <ImageButton
            android:layout_marginTop="36dp"
            android:id="@+id/btn_skip"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_next"
            app:layout_constraintTop_toBottomOf="@id/timer_display"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tasks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:layout_weight="1"
            android:backgroundTint="@color/transparent_white"
            android:fontFamily="@font/poppins_semiBold"
            android:text="Task"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timer_wrapper" />


</androidx.constraintlayout.widget.ConstraintLayout>